--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,7 +11,9 @@
 		<a href="list-products">IList Product</a> ||
 		<a href="add-product">Add Product</a> ||
 		<a href="update-product">Update Product</a> ||
-		<a href="delete-product">Delete Product</a> ||
+		<a href="delete-product">Delete Product</a> || <br><br>
+		
+		<a href="add-product-with-details">Add Product with details</a> ||
 	</nav>
 </body>
 </html>
