--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,6 +14,7 @@
 		<a href="delete-product">Delete Product</a> || <br><br>
 		
 		<a href="add-product-with-details">Add Product with details</a> ||
+		<a href="add-order-with-product">Add Order with products </a> ||
 	</nav>
 </body>
 </html>
